Fix code color and alignment

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -266,14 +266,14 @@ pre {
     padding: 0;
     font-size: inherit;
     // Default
-    color: #ccc;
+    color: $light-color-secondary;
 
     @media (prefers-color-scheme: dark) {
       color: inherit;
     }
 
     @media (prefers-color-scheme: light) {
-      color: #ccc;
+      color: $light-color-secondary;
     }
 
     [data-theme=dark] & {
@@ -281,7 +281,7 @@ pre {
     }
 
     [data-theme=light] & {
-      color: #ccc;
+      color: $light-color-secondary;
     }
   }
 }
