--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,7 +8,7 @@ $light-background-secondary: #eaeaea;
 $light-background-header: #fafafa;
 $light-color: #222;
 $light-color-variant: black;
-$light-color-secondary: #999;
+$light-color-secondary: #727272;
 $light-border-color: #dcdcdc;
 $light-table-color: #dcdcdc;
 
